--- a/mod_install/Info.plist
+++ b/mod_install/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>7.0.0</string>
+	<key>CFBundleGetInfoString</key>
+	<string>@PAK software v. 7.0.0</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
