--- a/mod_install/Info.plist
+++ b/mod_install/Info.plist
@@ -5,9 +5,27 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDocumentTypes</key>
-	<array/>
+	<array>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>ut4mod,</string>
+				<string>umod</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>UMOD file</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSPersistentStoreTypeKey</key>
+			<string>Binary</string>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleGetInfoString</key>
+	<string>@PAK software v. 7.0.0</string>
 	<key>CFBundleIconFile</key>
 	<string>mod_install</string>
 	<key>CFBundleIdentifier</key>
@@ -21,9 +39,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>7.0.0</string>
-	<key>CFBundleGetInfoString</key>
-	<string>@PAK software v. 7.0.0</string>
+	<string>7.5</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
