Fixed opening up .ut4mods.  Changed the credits.  This was version 7.0.1.

--- a/mod_install/Info.plist
+++ b/mod_install/Info.plist
@@ -9,7 +9,7 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>ut4mod,</string>
+				<string>ut4mod</string>
 				<string>umod</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
@@ -27,7 +27,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleGetInfoString</key>
-	<string>@PAK software v. 7.0.0</string>
+	<string>@PAK software v. 7.0.1</string>
 	<key>CFBundleIconFile</key>
 	<string>mod_install</string>
 	<key>CFBundleIdentifier</key>
@@ -41,7 +41,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>7.5</string>
+	<string>7.0.1</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
